fixed front end again

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,4 +1,4 @@
-<html ng-app = "schedule">
+<html ng-app = "neuropolis">
 <head lang="en">
   <meta charset="utf-8">
 	<title>Neuropolis</title>
@@ -11,15 +11,16 @@
 </div>
       <hr>
   <ng-view></ng-view>
-  <script type="text/javascript" src="angular.min.js"></script>
+  <script type="text/javascript" src="node_modules/angular/angular.min.js"></script>
 
-  <script type="text/javascript" src="angular-route.min.js"></script>
-  <script type="text/javascript" src="angular-sanitize.min.js"></script>
+  <script type="text/javascript" src="node_modules/angular-route/angular-route.min.js"></script>
+  <script type="text/javascript" src="node_modules/angular-sanitize/angular-sanitize.min.js"></script>
   <script src='node_modules/angular-resource/angular-resource.min.js'>
   </script>
 
   <script type="text/javascript" src="app.js"></script>
-  <script type="text/javascript" src="services.js"></script>
+  <script type="text/javascript" src="src/services.js"></script>
+  <script type="text/javascript" src="src/services.js"></script>
 
 
 </body>
