--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" type="text/css" href="bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="app.css">
 </head>
-<body>
+<body ng-controller="NeuralNetController as net">
 <div class="container">
   <h1 class="jumbotron">Neuropolis</h1>
 </div>
