--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,6 +10,11 @@
   <h1 class="jumbotron">Neuropolis</h1>
 </div>
       <hr>
+      {{net.net | json}}
+      <hr>
+      <div>
+      	
+      </div>
   <ng-view></ng-view>
   <script type="text/javascript" src="node_modules/angular/angular.min.js"></script>
 
@@ -20,7 +25,7 @@
 
   <script type="text/javascript" src="app.js"></script>
   <script type="text/javascript" src="src/services.js"></script>
-  <script type="text/javascript" src="src/services.js"></script>
+  <script type="text/javascript" src="src/controllers.js"></script>
 
 
 </body>
